Improve concurrency and fix saving ducts